syntax = "proto3";
package paymentpb;
option go_package = "github.com/vietquan-37/order-service/pkg/pb";
message PaymentLinkResponse{
  string link = 1;
}
message PaymentLinkRequest{
  int32 order_id = 1;
  float amount = 2;
  repeated Items items = 3;

}
message Items{
  int32 product_id = 1;
  string product_name=2;
  int64 quantity = 3;
  float price = 4;
}

service PaymentService {
  rpc CreatePaymentLink(PaymentLinkRequest)returns(PaymentLinkResponse){}
}
